style: Fixed issue with navigate back button being wrong size

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -536,6 +536,7 @@ body {
   line-height: 1.1;
   display: flex;
   justify-content: space-between;
+  align-items: flex-start;
 }
 
 .detailsPageTitle {
